--- a/nms/templates/nms/layout.html
+++ b/nms/templates/nms/layout.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
         {% load static %}
-        <link href="{% static 'network_management/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'nms/styles.css' %}" rel="stylesheet">
 
         <!-- Link the JavaScript file -->
-        <script src="{% static 'network_management/script.js' %}" defer ></script>
+        <script src="{% static 'nms/script.js' %}" defer ></script>
 
     </head>
     <body>
