--- a/nms/templates/nms/index.html
+++ b/nms/templates/nms/index.html
@@ -17,7 +17,9 @@
 
     <div id="tickets-view"></div>
 
-    <div id="create-ticket-view" >
+    <div id="notes-view"></div>
+
+    <div id="create-ticket-view">
 
         <div class="container mt-5">
             <h2>Create Ticket</h2>
@@ -86,7 +88,8 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
-    </div>
+    </div>    
+   
 </div>
 
 {% endblock %}
