--- a/nms/templates/nms/view_ticket.html
+++ b/nms/templates/nms/view_ticket.html
@@ -99,10 +99,11 @@
     <div id="comments-section" class="mt-3">
         {% for comment in comments %}
         <div class="card mb-3">
-            <div class="card-body">
+            <div class="card-body comment">
                 <h5 class="card-title">{{ comment.user.username }}</h5>
-                <h6 class="card-subtitle text-muted">{{ comment.created_date }}</h6>
+                
                 <p class="card-text mt-2">{{ comment.content }}</p>
+                <h6 class="card-subtitle text-muted">{{ comment.created_date }}</h6>
             </div>
         </div>
         {% empty %}
