Search added and working, to need fix some navigation

--- a/nms/static/nms/styles.css
+++ b/nms/static/nms/styles.css
@@ -1,3 +1,20 @@
+
+/* links styles */
+
+.links{
+    list-style-type: none;
+}
+
+
+/* menu styling  */
+
+.main-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 /* Notes styling */
 
 
