--- a/nms/templates/nms/edit_note.html
+++ b/nms/templates/nms/edit_note.html
@@ -2,18 +2,30 @@
 
 {% block body %}
 
-<h1>Edit Note</h1>
-<form method="post" action="{% url 'edit_note' note.id %}">
-    {% csrf_token %}
-    <div>
-        <label for="title">Title:</label><br>
-        <input type="text" id="title" name="title" value="{{ note.title }}" required style="width: 100%;"><br><br>
-    </div>
-    <div>
-        <label for="content">Content:</label><br>
-        <textarea id="content" name="content" rows="10" cols="50" required>{{ note.content }}</textarea><br>
-    </div>
-    <button type="submit">Save Note</button>
-</form>
+<h1 class="text-center my-4">Edit Note</h1>
+
+<div class="container">
+    <form method="post" action="{% url 'edit_note' note.id %}" class="form-group">
+        {% csrf_token %}
+        
+        <!-- Title -->
+        <div class="mb-3">
+            <label for="title" class="form-label">Title:</label>
+            <input type="text" id="title" name="title" value="{{ note.title }}" required class="form-control">
+        </div>
+
+        <!-- Content -->
+        <div class="mb-3">
+            <label for="content" class="form-label">Content:</label>
+            <textarea id="content" name="content" rows="10" placeholder="Write in Markdown" required class="form-control">{{ note.content }}</textarea>
+        </div>
+
+        <!-- Submit Button -->
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Save Note</button>
+        </div>
+    </form>
+</div>
 
 {% endblock %}
+
