--- a/nms/templates/nms/view_note.html
+++ b/nms/templates/nms/view_note.html
@@ -1,30 +1,27 @@
-
 {% extends "nms/layout.html" %}
-
 
 {% block body %}
 
-<h3>Note by {{ note.user.username }}</h3>
-<div>
- 
-    <span>Written on {{ note.created_at }}</span>
+<div class="container my-4">
+
+    <h3 class="text-center mb-3">Note by {{ note.user.username }}</h3>
+
+    <!-- Note metadata -->
+    <div class="text-muted mb-4">
+        <span>Created on {{ note.created_at }}</span>
+    </div>
     <hr>
-    <a href="{% url 'edit_note' note.id %}" class="btn btn-success">Edit note</a> 
-    <br>
-    <br>
-    <br>
-    <br>
-   
-    <!-- <h2>{{ note.title }}</h2> -->
-    <div>
+
+    <!-- Edit Note Button -->
+    <div class="text-center mb-4">
+        <a href="{% url 'edit_note' note.id %}" class="btn btn-success btn-lg">Edit note</a> 
+    </div>
+
+    <!-- Rendered content -->
+    <div class="note-content">
         {{ rendered_content|safe }}
     </div>
+
 </div>
-
-<br>
-<br>
-<br>
-
-
 
 {% endblock %}
