--- a/nms/templates/nms/edit_note.html
+++ b/nms/templates/nms/edit_note.html
@@ -22,7 +22,7 @@
 
         <!-- Submit Button -->
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Save Note</button>
+            <button type="submit" class="btn btn-outline-primary">Save Note</button>
         </div>
     </form>
 </div>
