--- a/nms/templates/nms/view_note.html
+++ b/nms/templates/nms/view_note.html
@@ -14,7 +14,7 @@
 
     <!-- Edit Note Button -->
     <div class="text-center mb-4">
-        <a href="{% url 'edit_note' note.id %}" class="btn btn-success btn-lg">Edit note</a> 
+        <a href="{% url 'edit_note' note.id %}" class="btn btn-outline-primary btn-lg">Edit note</a> 
     </div>
 
     <!-- Rendered content -->
